SRV-1122: Code cleanup
SRV-1122 (Remote Workflow Control doesn't work over https)
https://knime-com.atlassian.net/browse/SRV-1122